fixed responsiveness on small screens

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -245,4 +245,8 @@ footer .github-portfolio-site:hover {
   .content {
     text-align: center;
   }
+
+  .heading {
+    margin-top: 50px;
+  }
 }
